# find-dups

./: Cargo.toml  README.md
src/: cli.rs  finder.rs  hash.rs  main.rs  model.rs
