[package]
name = "find-duplicates"
version = "0.1.0"
authors = ["Aykut Açikel <acikel.orkhon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"

blake2 = "0.10"

log = "0.4.17"
env_logger = "0.10.0"

rayon = "1.6.1"

chrono = "0.4.23"

clap = "3.2.23"